--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,14 @@
 </head>
 <body>
   <h2>🎬 دانلود ویدیوی یوتیوب</h2>
+
   <form action="/download" method="POST">
     <input type="text" name="url" placeholder="لینک ویدیو را وارد کنید" style="width: 300px;" required>
     <button type="submit">دانلود</button>
   </form>
+
+  {% if message %}
+    <p style="color: green;">{{ message }}</p>
+  {% endif %}
 </body>
 </html>
